[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/entity/Karakter.gd" type="Script" id=1]
[ext_resource path="res://sprites/karakter/Karakter_2.png" type="Texture" id=2]
[ext_resource path="res://scenes/vfx/TozToprak.tscn" type="PackedScene" id=3]
[ext_resource path="res://sprites/karakter/Goz.png" type="Texture" id=4]
[ext_resource path="res://sprites/karakter/Goz2.png" type="Texture" id=5]
[ext_resource path="res://sprites/karakter/Karakter_2_death.png" type="Texture" id=6]

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 6 )
region = Rect2( 0, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 6 )
region = Rect2( 24, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 6 )
region = Rect2( 48, 0, 24, 48 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 6 )
region = Rect2( 72, 0, 24, 48 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 6 ), SubResource( 7 ), SubResource( 8 ), SubResource( 9 ) ],
"loop": true,
"name": "DEATH",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "HARVEST",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 12.0

[sub_resource type="CircleShape2D" id=5]
radius = 12.0

[node name="Karakter" type="RigidBody2D"]
mode = 2
linear_damp = 6.0
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, 12 )
texture = ExtResource( 2 )
offset = Vector2( 0, -24 )

[node name="Goz2" type="Sprite" parent="Sprite"]
z_index = 100
texture = ExtResource( 5 )
offset = Vector2( 0, -24 )

[node name="Goz" type="Sprite" parent="Sprite"]
z_index = 99
texture = ExtResource( 4 )
offset = Vector2( 0, -24 )

[node name="DeathSprite" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 10 )
animation = "DEATH"
offset = Vector2( 0, -12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="StealthArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="StealthArea"]
shape = SubResource( 5 )

[node name="TozToprak" parent="." instance=ExtResource( 3 )]

[node name="Listener" type="Listener2D" parent="."]
current = true
